--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
             margin:0;
             padding:0;
             font-family: 'Barriecito', cursive;
+            background-color:rgb(30, 126, 30);
+            color:yellow;
         }
     </style>
   </head>
 
   <body>
-    <header>welcome to the zone buddy</header>
+    <header>
+      <img src="" alt="">
+    </header>
     <h1>GGreen</h1>
   </body>
 </html>
